# zxcmodule

./: CMakeLists.txt  README.md  zxcmodule.vcxproj  zxcmodule.vcxproj.filters
.github/workflows/: build.yml  release.yml
include/: Interfaces.h
include/GarrysMod/Lua/: Interface.h  LuaBase.h  LuaInterface.h  LuaShared.h  Types.h  UserData.h
include/Valve/: Angle.h  IClientState.h  INetChannel.h  INetworkSystem.h  IVEngineClient.h  Interfaces.h  VMatrix.h  Vector.h  bitbuf.cpp  bitbuf.h  bitvec.h  coordsize.h  protocol.h
include/memory/: memory.hpp  vmt.hpp
include/minhook/: MinHook.h  buffer.c  buffer.h  hook.c  trampoline.c  trampoline.h
include/minhook/hde/: hde32.h  hde64.h
include/vmt/: vmt.hpp
src/: engineclient.h  globals.cpp  globals.h  main.cpp  vmatrix.h
src/api/: api.hpp  controller.cpp
src/zxcmodule/: globals.cpp  globals.h  pointers.cpp  pointers.h
src/zxcmodule/api/: api.hpp  clientstate.hpp  controller.cpp  controller.h  engine.hpp  lua.hpp  netchannel.hpp
src/zxcmodule/api/engine/: engine.hpp  netchannel.hpp
src/zxcmodule/hooks/: controller.cpp  controller.h  hook.hpp
